# broderickpt.github.io

./: CMakeLists.txt  README.md  apis.html
.doctrees/: apis.doctree  bibliography.doctree  contribute.doctree  environment.pickle  extending.doctree  faq.doctree  gethelp.doctree  index.doctree  install.doctree  introduction.doctree  team.doctree
.github/workflows/: build-sphinx.yml
docs/: buildsite.sh
